@@ -1,5 +1,10 @@
 2011-10-03 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c:
+	  Use Rabbit-specific instructions in and and assignment for r2k port.
+
+2011-10-03 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/gen.c,
 	  src/z80/peep.c:
 	  Preparations for use of add sp, #n in function entry in r2k port.
